@@ -1,3 +1,6 @@
+2023-07-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Fix double free() during report generation (closes: #157)
+
 2023-07-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Update GPG key in SECURITY.md
 
